[gd_scene load_steps=25 format=3 uid="uid://ctt2q7h764fd0"]

[ext_resource type="Script" path="res://battle.gd" id="1_t17ni"]
[ext_resource type="Texture2D" uid="uid://dnn0cgdbmqu8d" path="res://icon.svg" id="1_uqos5"]

[sub_resource type="Gradient" id="Gradient_lgv8i"]
colors = PackedColorArray(0.404685, 0, 0.101545, 1, 0.485339, 0, 0.0657251, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_wksta"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_xya07"]
width = 256
height = 24
color_ramp = SubResource("Gradient_lgv8i")
noise = SubResource("FastNoiseLite_wksta")

[sub_resource type="Gradient" id="Gradient_e62k3"]
colors = PackedColorArray(0, 0.531717, 0.346025, 1, 1.08294e-07, 0.24356, 0.165881, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_x8dy0"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_1vtd3"]
width = 256
height = 24
color_ramp = SubResource("Gradient_e62k3")
noise = SubResource("FastNoiseLite_x8dy0")

[sub_resource type="Gradient" id="Gradient_3nxet"]
colors = PackedColorArray(0, 0, 0, 1, 0.0754697, 0, 0.00234757, 1)

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_yn265"]
width = 256
height = 24
color_ramp = SubResource("Gradient_3nxet")
noise = SubResource("FastNoiseLite_wksta")

[sub_resource type="Gradient" id="Gradient_xnu6i"]
colors = PackedColorArray(3.7542e-06, 0.483696, 0.677929, 1, 6.13667e-07, 0.224417, 0.300513, 1)

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_8rj4k"]
width = 256
height = 24
color_ramp = SubResource("Gradient_xnu6i")
noise = SubResource("FastNoiseLite_x8dy0")

[sub_resource type="Gradient" id="Gradient_y6l8m"]
colors = PackedColorArray(0.480116, 0, 0.139273, 1, 0.350757, 0, 0.0357452, 1)

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_8did5"]
width = 256
height = 24
color_ramp = SubResource("Gradient_y6l8m")
noise = SubResource("FastNoiseLite_wksta")

[sub_resource type="Gradient" id="Gradient_f50mk"]
colors = PackedColorArray(2.55093e-06, 0.531767, 0.345419, 1, 0, 0.243103, 0.170732, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_o4ee1"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_h1ioy"]
width = 256
height = 24
color_ramp = SubResource("Gradient_f50mk")
noise = SubResource("FastNoiseLite_o4ee1")

[sub_resource type="Gradient" id="Gradient_br1hi"]
colors = PackedColorArray(0, 0, 0, 1, 0.158472, 0.158472, 0.158472, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_6sibm"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_3kbgu"]
width = 2400
color_ramp = SubResource("Gradient_br1hi")
noise = SubResource("FastNoiseLite_6sibm")

[sub_resource type="Gradient" id="Gradient_ceifd"]
colors = PackedColorArray(0, 0, 0, 1, 0.140447, 0.140447, 0.140447, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_uttwk"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_s4uit"]
width = 1200
height = 220
color_ramp = SubResource("Gradient_ceifd")
noise = SubResource("FastNoiseLite_uttwk")

[sub_resource type="LabelSettings" id="LabelSettings_3jfly"]
font_size = 32

[node name="Node2D" type="Node2D"]
script = ExtResource("1_t17ni")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Player" type="Sprite2D" parent="."]
position = Vector2(-397, 7)
texture = ExtResource("1_uqos5")

[node name="Enemy" type="Sprite2D" parent="."]
position = Vector2(433, 7)
texture = ExtResource("1_uqos5")

[node name="PlayerHPBar" type="TextureProgressBar" parent="."]
offset_left = -489.0
offset_top = -206.0
offset_right = -233.0
offset_bottom = -166.0
value = 100.0
texture_under = SubResource("NoiseTexture2D_xya07")
texture_progress = SubResource("NoiseTexture2D_1vtd3")

[node name="PlayerMPBar" type="TextureProgressBar" parent="."]
offset_left = -494.0
offset_top = 239.0
offset_right = -238.0
offset_bottom = 279.0
value = 100.0
texture_under = SubResource("NoiseTexture2D_yn265")
texture_progress = SubResource("NoiseTexture2D_8rj4k")

[node name="EnemyHPBar" type="TextureProgressBar" parent="."]
offset_left = 258.0
offset_top = -204.0
offset_right = 514.0
offset_bottom = -164.0
value = 100.0
texture_under = SubResource("NoiseTexture2D_8did5")
texture_progress = SubResource("NoiseTexture2D_h1ioy")

[node name="PlayerHPLabel" type="Label" parent="."]
offset_left = -488.0
offset_top = -236.0
offset_right = -448.0
offset_bottom = -213.0
text = "HP:"

[node name="EnemyHPLabel" type="Label" parent="."]
offset_left = 264.0
offset_top = -237.0
offset_right = 304.0
offset_bottom = -214.0
text = "HP:"

[node name="PlayerMPLabel" type="Label" parent="."]
offset_left = -488.0
offset_top = 209.0
offset_right = -448.0
offset_bottom = 232.0
text = "MP:"

[node name="HPPotionLabel" type="Label" parent="."]
offset_left = -404.0
offset_top = 121.0
offset_right = -315.0
offset_bottom = 144.0
text = "HP Potions:"

[node name="MPPotionLabel" type="Label" parent="."]
offset_left = -281.0
offset_top = 122.0
offset_right = -189.0
offset_bottom = 145.0
text = "MP Potions:"

[node name="AttackButton" type="Button" parent="."]
offset_left = -501.0
offset_top = 156.0
offset_right = -443.0
offset_bottom = 187.0
tooltip_text = "A regular attack using your strength and weapon attack stats"
text = "Attack"

[node name="HPPotionButton" type="Button" parent="."]
offset_left = -402.0
offset_top = 157.0
offset_right = -317.0
offset_bottom = 188.0
text = "HP Potion"

[node name="MPPotionButton" type="Button" parent="."]
offset_left = -279.0
offset_top = 157.0
offset_right = -191.0
offset_bottom = 188.0
text = "MP Potion"

[node name="StabButton" type="Button" parent="."]
offset_left = 36.0
offset_top = 155.0
offset_right = 79.0
offset_bottom = 186.0
tooltip_text = "A strong stab attack adding physical damage
Costs 10 MP"
text = "Stab"

[node name="StarsButton" type="Button" parent="."]
offset_left = 36.0
offset_top = 226.0
offset_right = 84.0
offset_bottom = 257.0
tooltip_text = "Shoot Magical Ninja Stars Damage based on Wisdom
Costs 20 MP"
text = "Stars"

[node name="StrengthSlashButton" type="Button" parent="."]
offset_left = 122.0
offset_top = 155.0
offset_right = 242.0
offset_bottom = 186.0
disabled = true
text = "Strength Slash"

[node name="EnergyBlastButton" type="Button" parent="."]
offset_left = 138.0
offset_top = 226.0
offset_right = 242.0
offset_bottom = 257.0
disabled = true
text = "Energy Blast"

[node name="SpeedSlashButton" type="Button" parent="."]
offset_left = 279.0
offset_top = 154.0
offset_right = 379.0
offset_bottom = 185.0
disabled = true
text = "Speed Slash"

[node name="MultiBlastButton" type="Button" parent="."]
offset_left = 279.0
offset_top = 227.0
offset_right = 379.0
offset_bottom = 258.0
disabled = true
text = "MultiBlast"

[node name="GameOverPanel" type="Panel" parent="."]
offset_left = -633.0
offset_top = 119.0
offset_right = 1767.0
offset_bottom = 519.0

[node name="TryAgainButton" type="Button" parent="GameOverPanel"]
layout_mode = 0
offset_left = 593.0
offset_top = -89.0
offset_right = 681.0
offset_bottom = -58.0
text = "Try Again?"

[node name="Sprite2D" type="Sprite2D" parent="GameOverPanel"]
position = Vector2(680, 249)
texture = SubResource("NoiseTexture2D_3kbgu")

[node name="VictoryPanel" type="Panel" parent="."]
offset_left = -682.0
offset_top = 123.0
offset_right = 7518.0
offset_bottom = 523.0

[node name="VictoryButton" type="Button" parent="VictoryPanel"]
layout_mode = 0
offset_left = 593.0
offset_top = -195.0
offset_right = 774.0
offset_bottom = -141.0
text = "Victory!
Click Here to Continue"

[node name="ExperienceGainedLabel" type="Label" parent="VictoryPanel"]
layout_mode = 0
offset_left = 622.0
offset_top = -116.0
offset_right = 662.0
offset_bottom = -93.0

[node name="GoldGainedLabel" type="Label" parent="VictoryPanel"]
layout_mode = 0
offset_left = 621.0
offset_top = -96.0
offset_right = 662.0
offset_bottom = -73.0

[node name="Sprite2D" type="Sprite2D" parent="VictoryPanel"]
position = Vector2(680, 249)
texture = SubResource("NoiseTexture2D_3kbgu")

[node name="PleaseWaitPanel" type="Panel" parent="."]
visible = false
offset_left = -743.0
offset_top = 117.0
offset_right = 7457.0
offset_bottom = 517.0

[node name="Sprite2D" type="Sprite2D" parent="PleaseWaitPanel"]
position = Vector2(739, 100)
texture = SubResource("NoiseTexture2D_s4uit")

[node name="Label" type="Label" parent="PleaseWaitPanel"]
layout_mode = 0
offset_left = 163.0
offset_top = -4.0
offset_right = 1327.0
offset_bottom = 206.0
text = "Please Wait..."
label_settings = SubResource("LabelSettings_3jfly")
horizontal_alignment = 1
vertical_alignment = 1
